--- a/src/components/Messages/Messages.scss
+++ b/src/components/Messages/Messages.scss
@@ -4,10 +4,23 @@
 
 
 
+
+
+
 .message {
   display: flex;
   max-width: 440px;
   margin-bottom: 15px;
+
+  &-image {
+    .message__attachments {
+      img {
+        width:160px;
+        height: 160px;
+      }
+    }
+  }
+
   &__attachments {
     display: flex;
     margin-bottom: 5px;
@@ -31,7 +44,7 @@
       width: 33px;
       height: 33px;
       margin-right: 13px;
-      margin-bottom: 32px;
+      margin-bottom: 5px;
     }
 
     }
@@ -48,9 +61,6 @@
 
 
     p {
-      /*
-      min-width: 500px;
-      */
       color:#ffffff;
       line-height: 20px;
     }
@@ -70,6 +80,7 @@
     }
     .message__avatar {
       img {
+        margin-bottom: 40px;
         margin-left: 13px;
       }
     }
@@ -97,3 +108,72 @@
 
   }
 }
+
+.message-is-typing {
+
+  .message__avatar {
+    margin-top: 60px;
+  }
+
+  .message__content {
+    .message__bubble {
+      background-color: #ffffff;
+      box-shadow: none;
+    }
+  }
+
+  .typing-indicator {
+    $ti-color-bg: #E6E7ED;
+    background-color: $ti-color-bg;
+    will-change: transform;
+    width: auto;
+    border-radius: 50px;
+    padding: 15px;
+    display: table;
+    margin: 0 auto;
+    position: relative;
+    animation: 2s bulge infinite ease-out;
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: -2px;
+      left: -2px;
+      height: 20px;
+      width: 20px;
+      border-radius: 50%;
+      background-color: $ti-color-bg;
+    }
+    &::after {
+      height: 10px;
+      width: 10px;
+      left: -10px;
+      bottom: -10px;
+    }
+    span {
+      height: 15px;
+      width: 15px;
+      float: left;
+      margin: 0 1px;
+      background-color: #9E9EA1;
+      display: block;
+      border-radius: 50%;
+      opacity: 0.4;
+      @for $i from 1 through 3 {
+        &:nth-of-type(#{$i}) {
+          animation: 1s blink infinite ($i * .3333s);
+        }
+      }
+    }
+  }
+  @keyframes blink {
+    50% {
+      opacity: 1;
+    }
+  }
+  @keyframes bulge {
+    50% {
+      transform: scale(1.05);
+    }
+  }
+} //buble typing
