--- a/src/components/Messages/Messages.scss
+++ b/src/components/Messages/Messages.scss
@@ -11,6 +11,7 @@
   display: flex;
   max-width: 440px;
   margin-bottom: 15px;
+  $self: &;
 
   &-image {
     .message__attachments {
@@ -59,10 +60,52 @@
     padding: 15px;
     margin-bottom: 10px;
 
-
     p {
       color:#ffffff;
       line-height: 20px;
+    }
+
+    &__audio {
+      width: 200px;
+      $audio:&;
+
+
+
+      &-duration {
+        color: #fafafa;
+        font-weight: 500;
+        opacity: 0.5;
+        font-size: 12px;
+      }
+
+      &-progress {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+
+        #{$audio}-info {
+          button {
+            cursor: pointer;
+            border:0;
+            width: 28px;
+            height: 28px;
+            border-radius: 30px;
+            background-color: #0f3997;
+            position: relative;
+            .pause {
+              position:absolute;
+              left:1px;
+              top:1px;
+            }
+            .play {
+              position: absolute;
+              left:2px;
+              top:1.5px;
+            }
+
+          }
+        }
+      }
     }
 
   }
@@ -177,3 +220,22 @@
     }
   }
 } //buble typing
+
+.message-is-audio {
+
+  .message__content {
+    /*
+    border: solid green 1px;
+    */
+    .dima {
+      .message__bubble {
+        /*
+        border: solid red 3px;
+        */
+      }
+
+    }
+
+
+  }
+}
