--- a/src/components/Messages/Messages.scss
+++ b/src/components/Messages/Messages.scss
@@ -221,21 +221,10 @@
   }
 } //buble typing
 
-.message-is-audio {
+.message__bubble__audio-pr {
+  margin-top: 2px;
+  height: 2px;
+  background-color: #418fff;
+  transition: width 0.3s ease;
 
-  .message__content {
-    /*
-    border: solid green 1px;
-    */
-    .dima {
-      .message__bubble {
-        /*
-        border: solid red 3px;
-        */
-      }
-
-    }
-
-
-  }
 }
