--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,2 +1,67 @@
 .home {
+  background-color: #ffffff;
+  .chat {
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    &__sidebar {
+      width: 320px;
+      border-right: 1px solid #f7f7f7;
+      overflow-y: scroll;
+      overflow-x: hidden;
+      &-header {
+
+        padding: 20px;
+        display: flex;
+        justify-content: space-between;
+        position:sticky;
+        top:0;
+        z-index: 2;
+        background-color: #fafafa;
+        .edit {
+          margin-top: 3px;
+          margin-right: 5px;
+          cursor: pointer;
+        }
+
+        & > div {
+          .users {
+            display: inline-block;
+            margin-right: 10px;
+          }
+
+        }
+      }
+      &-search {
+        padding: 0 20px 20px;
+        position:sticky;
+        top:62px;
+        background-color:   #fafafa;
+        z-index: 10;
+      }
+      &-dialogs {
+        .dialogs {
+          padding: 0 5px 0;
+          &__item:hover, &__item.active {
+            background-color: #fafafa;
+            cursor: pointer;
+          }
+        }
+
+      }
+    }
+    &__dialog {
+      flex:1;
+      width: 100%;
+      overflow-y: scroll;
+      &-header {
+        position: sticky;
+        top:0;
+        background-color: #f7f7f7;
+      }
+      &-messages {
+        padding: 0 10px;
+      }
+    }
+  }
 }
